apply plugin: 'com.android.application'

android {
    namespace 'com.github.peonyking'
    compileSdkVersion COMPILE_SDK_VERSION as int
    buildToolsVersion BUILD_TOOLS_VERSION
    buildFeatures {
        buildConfig true
    }

    defaultConfig {
        applicationId "com.github.peonyking"
        minSdkVersion MIN_SDK_VERSION as int
        targetSdkVersion TARGET_SDK_VERSION as int
        versionCode VERSION_CODE as int
        versionName VERSION_NAME
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        vectorDrawables.useSupportLibrary = true
        multiDexEnabled true

        buildConfigField "String", "OPENHUB_CLIENT_ID", "\"Ov23li6NLp7oqOQW5oBG\""
        buildConfigField "String", "OPENHUB_CLIENT_SECRET", "\"0f25ae899fde77b009cd24b58a0aa0a25e7c7a74\""
        buildConfigField "String", "BUGLY_ID", "\"\""
        buildConfigField "String", "DEBUG_BUGLY_ID", "\"\""
    }

    signingConfigs {
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
        debug {
        }
    }

    /* 处理 FastJSON 等对 Java 反射的使用 */
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    tasks.withType(JavaCompile).configureEach {
        options.fork = true
        options.forkOptions.jvmArgs += [
                '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED'
        ]
    }

    lintOptions {
        abortOnError false
        checkReleaseBuilds false
    }

    packagingOptions {
        resources {
            excludes += ['META-INF/DEPENDENCIES', 'META-INF/LICENSE', 'META-INF/LICENSE.txt',
                         'META-INF/license.txt', 'META-INF/NOTICE', 'META-INF/NOTICE.txt',
                         'META-INF/notice.txt', 'META-INF/ASL2.0']
        }
    }

    flavorDimensions "default"

    productFlavors {
        normal {
            dimension "default"
            resValue "string", "app_name", "OpenHub"
        }
        fullName {
            dimension "default"
            resValue "string", "app_name", "OpenHub for GitHub"
        }
    }

    productFlavors.all {
        flavor -> flavor.manifestPlaceholders = [BUGLY_APP_CHANNEL_VALUE: name]
    }

    applicationVariants.all { variant ->
        variant.outputs.all {
            outputFileName = "OpenHub-${variant.productFlavors[0].name}-${variant.buildType.name}-${defaultConfig.versionName}.apk"
        }
    }
}

repositories {
    maven { url "https://jitpack.io" }
    google()
    mavenCentral()
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    testImplementation 'junit:junit:4.13.2'

    implementation "androidx.appcompat:appcompat:${APPCOMPAT_VERSION}"
    implementation "androidx.core:core:${CORE_VERSION}"
    implementation "androidx.recyclerview:recyclerview:${RECYCLERVIEW_VERSION}"
    implementation "androidx.preference:preference:${PREFERENCE_VERSION}"
    implementation "androidx.browser:browser:${BROWSER_VERSION}"
    implementation "androidx.constraintlayout:constraintlayout:${CONSTRAINT_VERSION}"
    implementation "com.google.android.material:material:${MATERIAL_VERSION}"
    implementation "androidx.multidex:multidex:${MULTIDEX_VERSION}"
    implementation "androidx.cardview:cardview:1.0.0"
    implementation "androidx.legacy:legacy-support-v4:1.0.0"
    implementation "androidx.viewpager:viewpager:1.0.0"
    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"

    implementation project(':daautolib-core')
    implementation project(':daautolib-annotations')
    annotationProcessor project(':daautolib-compiler')

    implementation "com.jakewharton:butterknife:${BUTTERKNIFE_VERSION}"
    annotationProcessor "com.jakewharton:butterknife-compiler:${BUTTERKNIFE_VERSION}"

    implementation "org.greenrobot:greendao:${GREEN_DAO_VERSION}"
    implementation "org.greenrobot:eventbus:${EVENT_BUS_VERSION}"

    implementation "io.reactivex:rxjava:${RXJAVA_VERSION}"
    implementation "io.reactivex:rxandroid:${RXANDROID_VERSION}"

    implementation "com.squareup.retrofit2:retrofit:${RETROFIT_VERSION}"
    implementation "com.squareup.retrofit2:converter-gson:${RETROFIT_VERSION}"
    implementation "com.squareup.retrofit2:adapter-rxjava:${RETROFIT_VERSION}"
    implementation ("com.squareup.retrofit2:converter-simplexml:${RETROFIT_VERSION}"){
        exclude group: 'xpp3', module: 'xpp3'
        exclude group: 'stax', module: 'stax-api'
        exclude group: 'stax', module: 'stax'
    }
    implementation "com.squareup.okhttp3:okhttp:${OKHTTP_VERSION}"
    implementation "com.squareup.okhttp3:logging-interceptor:${OKHTTP_VERSION}"

    implementation "com.google.dagger:dagger:${DAGGER_VERSION}"
    annotationProcessor "com.google.dagger:dagger-compiler:${DAGGER_VERSION}"

    implementation "com.github.bumptech.glide:glide:${GLIDE_VERSION}"
    annotationProcessor "com.github.bumptech.glide:compiler:${GLIDE_VERSION}"

    implementation "de.hdodenhof:circleimageview:${CIRCLE_IMAGEVIEW_VERSION}"
    implementation "com.github.GrenderG:Toasty:${TOASTY_VERSION}"
    implementation "com.github.daniel-stoneuk:material-about-library:${MATERIAL_ABOUT_VERSION}"

    implementation "com.afollestad.material-dialogs:core:${MATERIAL_DIALOG_VERSION}"
    implementation "com.afollestad.material-dialogs:commons:${MATERIAL_DIALOG_VERSION}"

    implementation "io.noties.markwon:core:${MARKWON_VERSION}"
    implementation "io.noties.markwon:image-glide:${MARKWON_VERSION}"

    implementation "com.orhanobut:logger:${LOGGER_VERSION}"
    implementation "com.timehop.stickyheadersrecyclerview:library:${STICKY_HEAD_VERSION}"
    implementation "org.jsoup:jsoup:${JSOUP_VERSION}"
}